--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": "^7.1",
     "helpscout/api": "~2.0",
-    "illuminate/support": "^5.6"
+    "illuminate/support": "^5.6|^6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
