--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,18 @@ env:
 language: php
 
 php:
-  - 7.1
   - 7.2
   - 7.3
 
 before_script:
   - composer self-update
   - travis_retry composer require laravel/framework:${ILLUMINATE_VERSION} laravel/lumen-framework:${ILLUMINATE_VERSION} --no-interaction;
+
+# Laravel 5 is the only Laravel we support that's compatible with PHP v7.1
+jobs:
+  include:
+    - php: 7.1
+      env: ILLUMINATE_VERSION="^5.8"
 
 script:
   - composer test:travis
