update travis.yml to test new illuminate veresion

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ env:
   matrix:
     - ILLUMINATE_VERSION="^5.8"
     - ILLUMINATE_VERSION="^6.0"
+    - ILLUMINATE_VERSION="^7.0"
 #    Add other versions here to test against multiple framework versions
   global:
     - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
