--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": "^7.3",
     "helpscout/api": "~3.0",
-    "illuminate/support": "^5.6|^6.0|^7.0"
+    "illuminate/support": "^5.6|^6.0|^7.0|^8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
