--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "source": "https://github.com/helpscout/helpscout-api-php-laravel"
   },
   "require": {
-    "php": "^7.1",
+    "php": "^7.1|^8.0",
     "helpscout/api": "~2.0",
     "illuminate/support": "^5.6|^6.0"
   },
