--- a/composer.json
+++ b/composer.json
@@ -1,60 +1,79 @@
 {
-  "name": "helpscout/api-laravel",
-  "homepage": "https://www.helpscout.com",
-  "description": "Service provider and facade to integrate the Help Scout Mailbox API 2.0 with Laravel and Lumen",
-  "keywords": ["helpscout", "help desk", "support", "api", "laravel", "lumen"],
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Help Scout Platform Team",
-      "email": "developer@helpscout.com",
-      "homepage": "https://www.helpscout.com"
+    "name": "helpscout/api-laravel",
+    "homepage": "https://www.helpscout.com",
+    "description": "Service provider and facade to integrate the Help Scout Mailbox API 2.0 with Laravel and Lumen",
+    "keywords": [
+        "helpscout",
+        "help desk",
+        "support",
+        "api",
+        "laravel",
+        "lumen"
+    ],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Help Scout Platform Team",
+            "email": "developer@helpscout.com",
+            "homepage": "https://www.helpscout.com"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/helpscout/helpscout-api-php-laravel/issues",
+        "source": "https://github.com/helpscout/helpscout-api-php-laravel"
+    },
+    "require": {
+        "php": "^7.3|^8.0",
+        "helpscout/api": "~3.0",
+        "illuminate/support": "^5.6|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.0|^10.5",
+        "phpstan/phpstan": "^0.12|^1.10",
+        "friendsofphp/php-cs-fixer": "^2.3|^3.50"
+    },
+    "suggest": {
+        "laravel/framework": "To test the Laravel bindings",
+        "laravel/lumen-framework": "To test the Lumen bindings"
+    },
+    "autoload": {
+        "psr-4": {
+            "HelpScout\\Laravel\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "HelpScout\\Laravel\\Test\\": "tests/"
+        }
+    },
+    "scripts": {
+        "analyse": "vendor/bin/phpstan analyse src tests --level=5",
+        "fix": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+        "sniff": "vendor/bin/php-cs-fixer fix --allow-risky=yes --dry-run --stop-on-violation",
+        "phpunit": "vendor/bin/phpunit",
+        "phpunit:clover": "vendor/bin/phpunit --coverage-clover build/logs/clover.xml",
+        "test": [
+            "@sniff",
+            "@analyse",
+            "@phpunit"
+        ],
+        "test:travis": [
+            "@sniff",
+            "@analyse",
+            "@phpunit:clover"
+        ],
+        "test:report": "vendor/bin/phpunit --coverage-html build/reports/phpunit"
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "extra": {
+        "laravel": {
+            "providers": [
+                "HelpScout\\Laravel\\HelpScoutServiceProvider"
+            ],
+            "aliases": {
+                "HelpScout": "HelpScout\\Laravel\\HelpScoutFacade"
+            }
+        }
     }
-  ],
-  "support": {
-    "issues": "https://github.com/helpscout/helpscout-api-php-laravel/issues",
-    "source": "https://github.com/helpscout/helpscout-api-php-laravel"
-  },
-  "require": {
-    "php": "^7.3|^8.0",
-    "helpscout/api": "~3.0",
-    "illuminate/support": "^5.6|^6.0|^7.0|^8.0|^9.0|^10.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^8.0",
-    "phpstan/phpstan": "^0.12",
-    "friendsofphp/php-cs-fixer": "^2.3"
-  },
-  "suggest": {
-    "laravel/framework": "To test the Laravel bindings",
-    "laravel/lumen-framework": "To test the Lumen bindings"
-  },
-  "autoload": {
-    "psr-4": { "HelpScout\\Laravel\\": "src/" }
-  },
-  "autoload-dev": {
-    "psr-4": { "HelpScout\\Laravel\\Test\\": "tests/" }
-  },
-  "scripts": {
-    "analyse": "vendor/bin/phpstan analyse src tests --level=5",
-    "fix": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
-    "sniff": "vendor/bin/php-cs-fixer fix --allow-risky=yes --dry-run --stop-on-violation",
-    "phpunit": "vendor/bin/phpunit",
-    "phpunit:clover": "vendor/bin/phpunit --coverage-clover build/logs/clover.xml",
-    "test": ["@sniff", "@analyse", "@phpunit"],
-    "test:travis": ["@sniff", "@analyse", "@phpunit:clover"],
-    "test:report": "vendor/bin/phpunit --coverage-html build/reports/phpunit"
-  },
-  "minimum-stability": "stable",
-  "prefer-stable": true,
-  "extra": {
-    "laravel": {
-      "providers": [
-        "HelpScout\\Laravel\\HelpScoutServiceProvider"
-      ],
-      "aliases": {
-        "HelpScout": "HelpScout\\Laravel\\HelpScoutFacade"
-      }
-    }
-  }
 }
